--- a/lsystem-hs.cabal
+++ b/lsystem-hs.cabal
@@ -69,7 +69,8 @@ executable lsystem-hs
 
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.17.2.1,
-                      unordered-containers ^>=0.2.20
+                      unordered-containers ^>=0.2.20,
+                      random ^>=1.2.1.2
 
     -- Directories containing source files.
     hs-source-dirs:   app
