--- a/lsystem-hs.cabal
+++ b/lsystem-hs.cabal
@@ -62,7 +62,7 @@ executable lsystem-hs
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    Parser
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -70,7 +70,8 @@ executable lsystem-hs
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.17.2.1,
                       unordered-containers ^>=0.2.20,
-                      random ^>=1.2.1.2
+                      random ^>=1.2.1.2,
+                      parsec ^>=3.1.17.0
 
     -- Directories containing source files.
     hs-source-dirs:   app
